# ProjectD

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
projectd/: cli.py  config.py  doxygen_parser.py  parse.py  run.py
projectd/doxygen_parser/: __init__.py  dataclasses.py  doxygen_parser.py  process_lines.py  utils.py
tests/: test_doxygen_parser.py  test_foo.py
tests/doxygen_parser/: test_entity_doc.py  test_namespace_doc.py  test_process_lines.py
