[tool.poetry]
name = "projectd"
version = "0.0.1"
description = "TBD"
authors = ["seladb <fpcapplusplus@gmail.com>"]
repository = "https://github.com/seladb/ProjectD"
documentation = "https://seladb.github.io/ProjectD/"
readme = "README.md"
packages = [
  {include = "projectd"}
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
cxxheaderparser = "^1.1.0"
pcpp = "^1.30"
jinja2 = "^3.1.2"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.6.0"
tox = "^3.25.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
preview = true

[tool.mypy]
files = ["projectd"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]



